-	Several small fixes and improvements.
Added
-	Added channel support to communicate in different channels.
-	Sockets are added to a map of active sockets.
-	A list of active sockets can be retrieved with glue.Sockets().
-	Added unique ID for each socket.
-	Added Release function to block new incoming connections and to close all current connected sockets.
-	Added socket.Value interface to store custom data.
-	Added glue socket protocol versions check during socket connection initialization.

Removed
-	Removed discard_send_buffers from the frontend library. Use the discard callback in the send function instead.

--- a/sample/Channels/public/index.html
+++ b/sample/Channels/public/index.html
@@ -51,15 +51,22 @@
 			console.log("some data could not be send and was discarded.");
         });
 
+		// Channel
+		// #######
+		var c = socket.channel("golang");
 
-        //################//
+		c.onMessage(function(data) {
+            console.log(data);
+        });
+
+		c.send("Hello World");
+
 
         var count = 0;
 
         $("#b1").click(function() {
-            var data = (++count) + ": Hello World!";
-            console.log("client send message: " + data);
-            socket.send(data);
+            var data = (++count) + ": Hello Gophers!";
+            c.send(data);
         });
 	</script>
 </body>
