--- a/sample/OnlyWrite/public/index.html
+++ b/sample/OnlyWrite/public/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="utf8" />
 	<title>Glue Socket Test</title>
-	<script src="/jquery.min.js"></script>
-    <script src="/dist/glue.js"></script>
+  <script src="/dist/glue.js"></script>
 </head>
 <body>
 	<h1>Glue Socket Test</h1>
@@ -56,7 +55,8 @@
 
         var count = 0;
 
-        $("#b1").click(function() {
+				var b1 = document.getElementById("b1");
+				b1.addEventListener("click", function() {
             var data = (++count) + ": Hello World!";
             console.log("client send message: " + data);
             socket.send(data);
